--- a/AWS_Website/www_static/new_template/css/app-stylish-portfolio.css
+++ b/AWS_Website/www_static/new_template/css/app-stylish-portfolio.css
@@ -3,7 +3,6 @@ body {
     width: 100%;
     height: 100%;
 }
-
 h2 {
     color: black !important;
 }
@@ -47,20 +46,24 @@ input.renameSlide {
     opacity: 0;
 }
 
-
 .loginbody {
+margin: 2vw 10vw 0 15vw;
+width: 80%;
+
+/*
     position: fixed;
-    top: 20%;
+    margin: 7vw 10vw 10vw 20vw;
+    top: 7vw;
     left: 20%;
-    width: 70%
-    /* top: 50%; */
-    /* left: 50%; */
-    /* transform: translateX(-50%) translateY(-50%); */
+    width: 70%;
+   top: 50%;
+   left: 50%;
+   transform: translateX(-50%) translateY(-50%);
+   */
 }
 
 #noticeForm{
-    position:fixed;
-    margin:9vw 0 0 21vw;
+    margin:0 10vw -1.5vw 15vw;
 }
 
 #pres_login{
@@ -70,7 +73,8 @@ input.renameSlide {
 #pres_login_button{
     width: 100%;
     font-size: 20px;
-    height: 60px;
+    height: 20vh;
+    max-height: 60px;
     border: 1px solid #7eb9d0;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
@@ -242,7 +246,8 @@ input.renameSlide {
 .login-form-control {
     display: block;
     width: 100%;
-    height: 70px;
+    height: 25vh;
+    max-height: 70px;
     padding: 6px 12px;
     font-size: 20px;
     line-height: 1.42857143;
@@ -277,6 +282,7 @@ input.renameSlide {
     text-align: center;
     font-size: 5.5vw;
     margin-top: 2px;
+    margin-bottom: -1vw;
 }
 
 .mainbackground {
@@ -312,19 +318,6 @@ input.renameSlide {
 @media screen and (max-device-width: 1024px) {
 
 	#sidebar-wrapper {
-		z-index: 1000;
-		position: fixed;
-		right: 0;
-		width: 250px;
-		height: 100%;
-		margin-right: -250px;
-		overflow-y: auto;
-		background: #222;
-		-webkit-transition: all 0.4s ease 0s;
-		-moz-transition: all 0.4s ease 0s;
-		-ms-transition: all 0.4s ease 0s;
-		-o-transition: all 0.4s ease 0s;
-		transition: all 0.4s ease 0s;
 		font-size: 1.3em
 	}
 
