--- a/AWS_Website/www_static/A1/css/chalk.css
+++ b/AWS_Website/www_static/A1/css/chalk.css
@@ -1,5 +1,6 @@
 html,body{
-		background:url(/A1/img/chalk/bg.jpg);
+		/*background:url(/A1/img/chalk/bg.jpg);*/
+		background-color: #DCDCDC;
 }
 .chalk{
 		width:40px;
