--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -368,11 +368,10 @@ body {
 
 #screensharing{
 	position: absolute;
-	right: 0px;
+	right: 5%;
 	top: 5%;
 	width: 100%;
 	height: 100%;
-	background-color: white;
 	display: none;
 	z-index: 1;
 }
@@ -410,8 +409,7 @@ body {
 	opacity: 1;
 	position: absolute;
 	bottom: 0px;
-	left: 0px;
-	width: 25.5% !important;
+	width: 25.5%;
 	height: 60%;
 	display: none;
 	z-index: 2;
@@ -899,6 +897,7 @@ left: 0%;
     width: 100%;
     text-align: center;
     z-index: 2;
+		display: none;
 }
 
 .topRow {
