--- a/AWS_Website/www_static/A1/css/webrtc.css
+++ b/AWS_Website/www_static/A1/css/webrtc.css
@@ -2,18 +2,27 @@ video {
   display: block;
   width: 100%;
 }
-#videoR {
-  width: 90%;
+.videoEl {
+  position: relative;
+  border: 1px solid #CCCCCC;
+}
+
+#videoR > .videoEl {
   position: relative;
   margin-bottom: 10px;
   border: 1px solid #CCCCCC;
 }
+
+#videoR {
+  width: 100%;
+  height: 100%;
+}
 #videoL {
-  width: 90%;
+  width: 88%;
   border: 1px solid #3F7FBF;
   margin-bottom: 10px;
-  position: relative;
 }
+
 .audioBut {
   position: absolute;
   width: 30px;
