--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -155,6 +155,28 @@ body {
 /* END MENU */
 
 
+.share-div {
+	display: none;
+	position: absolute;
+	top: 5px;
+	z-index: 3;
+	width: 100%;
+	left: 50%;
+	margin-left: -50px; /* margin is -0.5 * dimension */
+
+}
+
+.a2a_kit > .copyButton > img {
+	width: 32px;
+	height: 32px;
+	display: inline-block;
+	cursor: hand;
+}
+
+.a2a_kit > .copyButton > img:hover {
+	opacity: 0.7;
+}
+
 .curtain {
 	z-index: 2;
 	position: absolute;
