fav, img_fcebook, bg, share screen button

--- a/AWS_Website/www_static/A1/css/A1-meeting.css
+++ b/AWS_Website/www_static/A1/css/A1-meeting.css
@@ -346,7 +346,7 @@ body {
 	line-height: normal;
 	overflow-x: hidden;
 	overflow-y: hidden;
-	background-color: white;
+	background-color: rgba(119, 119, 119, 0.58);
 }
 
 #recording{
