--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -25,7 +25,7 @@ body {
 	right:0px;
 	text-decoration: none;
 	display: none;
-	font-size: 10px;
+	font-size: 13px;
 	color: black;
 }
 
@@ -200,15 +200,26 @@ body {
 	display: none;
 }
 
+
+
+.videogalleryDisplay {
+  	width: 100%;
+}
+@media screen and (min-width: 768px) {
+  	.videogalleryDisplay {
+  		width: 80%;
+  	}
+  }
+
 #video-gallery {
 	/* position: absolute;
 	left:5%;
 	right:5%; */
 	z-index: 0;
-	width: 100%;
+	/*width: 80%;*/
 	height: 100%;
 	float: right;
-}
+}	
 
 .videoGallery .rsTmb {
 	padding: 20px;
@@ -325,6 +336,16 @@ body {
 		height: 100%;
   	}
 
+
+.videochatDisplay {
+  	display: none;
+}
+@media screen and (min-width: 768px) {
+  	.videochatDisplay {
+  		display: block;
+  	}
+  }
+
 #videochat{
 	position: absolute;
 	z-index: 2;
@@ -332,7 +353,7 @@ body {
 	top: 0px;
 	width: 25.5%;
 	height: 40%;
-	display: none;
+	/*display: none;*/
 	border: 1px solid rgba(0,0,0,.15);
 	-webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
 	box-shadow: 0 6px 12px rgba(0,0,0,.175);
@@ -419,6 +440,15 @@ body {
 		opacity: 0.6
 }
 
+.commentsDisplay {
+  	display: none;
+}
+@media screen and (min-width: 768px) {
+  	.commentsDisplay {
+  		display: block;
+  	}
+  }
+
 	#comments{
 	background-color: white;
 	border: 1px solid rgba(0,0,0,.15);
@@ -433,7 +463,7 @@ body {
 	bottom: 0px;
 	width: 25.5%;
 	height: 60%;
-	display: none;
+	/*display: none;*/
 	z-index: 2;
 	}
 
@@ -916,6 +946,7 @@ left: 0%;
 }
 #navButtons {
     bottom: -4;
+    left: 10%;
     position: absolute;
     width: 100%;
     text-align: center;
