--- a/AWS_Website/www_static/new_template/css/my_presentation.css
+++ b/AWS_Website/www_static/new_template/css/my_presentation.css
@@ -1,23 +1,48 @@
+
 .presentationUpgrade{
-  border-radius: 4px;
-  border: 1vw solid rgb(28, 28, 150);
-  color: #5C456D;
-  font-size: 14px;
-  line-height: 1.42857143;
-  height: 18%;
-  width: 100%;
-  max-width: 100%;
-  max-width: 100%;
-  margin-top: 1vw;
   background-color: #FFF;
-  overflow: scroll;
+  height: 18%;
   min-height: 10px;
+  border-radius: 4px;
+  margin-top: 1vw;
+  overflow: scroll;
 }
 
 .row {
-  margin: 0;
+ margin: 1vw 0 1.5vw 0;
 }
 
 .img-rounded {
-    margin: 1vw;
+  margin: 1vw 0 0 4vw;
+}
+
+.videoPres{
+}
+.textPres{
+  color: #5C456D;
+  max-height: 100%;
+  height: 100%;
+}
+.presTitle {
+font-size: 161%;
+color: #31708F;
+align-items: center;
+text-shadow: 1px 1px #FFFFFF;
+}
+
+.slidePres{
+  max-height: 100%;
+  height: 100%;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  background: linear-gradient(to bottom right, #504C75 10%, #6386B1 90%);
+}
+
+.deleteSlide{
+  color: red;
+}
+@media screen and (min-width: 440px) and (max-width: 560px) {
+  .img-rounded {
+    margin: 1vw 0 0 1vw;
+  }
 }
