--- a/AWS_Website/www_static/new_template/css/app-stylish-portfolio.css
+++ b/AWS_Website/www_static/new_template/css/app-stylish-portfolio.css
@@ -32,7 +32,9 @@ input.renameSlide {
     display: inline-block;
     font-size: 10px;
 }
-
+.max-height-page{
+  max-height: 100%;
+}
 .uploadfile input[type="file"] {
     cursor: inherit;
     width: inherit;
@@ -60,6 +62,12 @@ width: 80%;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
    */
+}
+
+.Howtoget{
+  text-align:center;
+  margin-top:3%;
+  font-size:3vw;
 }
 
 #noticeForm{
@@ -285,6 +293,12 @@ width: 80%;
     margin-bottom: -1vw;
 }
 
+.remoteTitleHowtoGet{
+    text-align: center;
+    font-size: 5.5vw;
+    margin-top: 2px;
+}
+
 .mainbackground {
     background: -webkit-linear-gradient(to bottom right, #02107B 10%, #0062DA 90%);
     background: -o-linear-gradient(to bottom right, #02107B 10%, #0062DA 90%);
@@ -302,12 +316,20 @@ width: 80%;
     position:fixed;
     top:0px;
     left:5px;
-    font-size: 14px;
-    color:black;
+    font-size: 2.5vw;
+    color: #C7C7C7;
     text-decoration:underline;
 }
 
 .simplePage {
+  position: absolute;
+  top: 14%;
+  left: 10px;
+  width: 99%;
+  max-width: 100%;
+}
+
+.simplePageHowtoGet {
   position: absolute;
   top: 14%;
   left: 10px;
@@ -328,4 +350,79 @@ width: 80%;
  a {
      font-size: 3vw;
    }
+}
+
+@media screen and (min-device-width: 0px) and (max-device-width: 460px) {
+
+  .remoteTitle{
+      text-align: center;
+      font-size: 10vw;
+      margin-top: 55px;
+      margin-bottom: 5vw;
+  }
+
+  .remoteTitleHowtoGet{
+      text-align: center;
+      font-size: 13vw;
+      margin-top: 8%;
+  }
+
+  .Howtoget{
+    text-align:center;
+    margin-top:3%;
+    font-size: 6vw;
+  }
+
+  .simplePage {
+      position: absolute;
+      top: 22%;
+      left: 5px;
+  }
+
+  .simplePageHowtoGet {
+      position: absolute;
+      top: 15%;
+      left: 0;
+  }
+
+.loginbody{
+  width: 100%;
+  margin: 0px 1px 0 17px;
+}
+
+.login-form-control{
+  font-size: 17px;
+}
+
+#Howtoget{
+  margin-top: 10px;
+}
+
+a{
+  color: #C7C7C7;
+  text-shadow: 1px 1px #000000;
+  font-size: 5vw
+}
+#sidebar-wrapper.active {
+    width: 98%;
+}
+.sidebar-nav{
+  width: 98%;
+}
+
+#noticeForm {
+    margin: -1px 9vw 1.5vw 6vw;
+}
+.backLink{
+  color: #C7C7C7;
+  font-size: 4vw;
+}
+#img_get_key {
+    width: 90%;
+    height: 30%;
+}
+#howToGetPresentationId {
+    font-size: 5vw;
+}
+
 }
