--- a/AWS_Website/www_static/new_template/css/app-stylish-portfolio.css
+++ b/AWS_Website/www_static/new_template/css/app-stylish-portfolio.css
@@ -32,13 +32,10 @@ input.renameSlide {
     display: inline-block;
     font-size: 10px;
 }
+
 .max-height-page{
   max-height: 100%;
 }
-.col-xs-12 {
-    max-width: 100%;
-    margin: 0 0 0 -15px
-  }
 .uploadfile input[type="file"] {
     cursor: inherit;
     width: inherit;
@@ -53,8 +50,8 @@ input.renameSlide {
 }
 
 .loginbody {
-margin: 2vw 10vw 0 15vw;
-width: 110%;
+margin: 2vw 0 0 3vw;
+width: 100%;
 
 /*
     position: fixed;
@@ -70,7 +67,7 @@ width: 110%;
 
 .Howtoget{
   text-align:center;
-  margin-top:5vw;
+  margin-top:3%;
   font-size:3vw;
 }
 
@@ -79,7 +76,8 @@ width: 110%;
 }
 
 #pres_login{
-    width: 100%;
+    width: 90%;
+    margin-top: 3vh;
 }
 
 #pres_login_button{
@@ -113,7 +111,6 @@ width: 110%;
     position: relative;
     display: inline-block;
     vertical-align: middle;
-  /*  margin-top: 10px; */
     width: 100%;
   }
 
@@ -152,8 +149,7 @@ width: 110%;
 
 #sidebar-wrapper.active {
     right: 250px;
-  /*  width: 450px; */
-    width: 98%;
+    width: 450px;
     background: linear-gradient(to bottom right, #02107B 10%, #0062DA 90%);
         -webkit-transition: all 0.4s ease 0s;
         -moz-transition: all 0.4s ease 0s;
@@ -181,7 +177,9 @@ width: 110%;
 
 .sidebar-nav li {
     text-indent: 20px;
-    line-height: 40px;
+    line-height: 56px;
+    margin-top: 4px;
+    background-color: #eee;
 }
 
 .sidebar-nav li a {
@@ -259,8 +257,8 @@ width: 110%;
 .login-form-control {
     display: block;
     width: 100%;
-    height: 44vh;
-    max-height: 82px;
+    height: 25vh;
+    max-height: 70px;
     padding: 6px 12px;
     font-size: 20px;
     line-height: 1.42857143;
@@ -357,43 +355,42 @@ width: 110%;
    }
 }
 
-@media screen and (min-device-width: 0px) and (max-device-width: 460px) {
+@media screen and (min-device-width: 0px) and (max-device-width: 350px) {
 
   .remoteTitle{
       text-align: center;
       font-size: 10vw;
-      margin-top: 5vw;
+      margin-top: 20vw;
       margin-bottom: 5vw;
-      max-width: 100%;
   }
 
   .remoteTitleHowtoGet{
       text-align: center;
-      font-size: 10vw;
-      margin-top: 4vw;
+      font-size: 13vw;
+      margin-top: 8%;
   }
 
   .Howtoget{
     text-align:center;
-    margin-top:8vw;
-    font-size: 4vw;
+    margin-top:3%;
+    font-size: 6vw;
   }
 
   .simplePage {
       position: absolute;
-      top: 22vw;
+      top: 22%;
       left: 5px;
   }
 
   .simplePageHowtoGet {
       position: absolute;
-      top: 15vw;
+      top: 15%;
       left: 0;
   }
 
 .loginbody{
-  width: 120%;
-  margin: 0px 0px 0 0px;
+  width: 100%;
+  margin: 0px 1px 0 17px;
 }
 
 .login-form-control{
@@ -423,13 +420,18 @@ a{
   color: #C7C7C7;
   font-size: 4vw;
 }
-/*#img_get_key {
+#img_get_key {
     width: 90%;
     height: 30%;
-} */
-
-#howToGetPresentationId {
-    font-size: 3vw;
 }
-
+#howToGetPresentationId {
+    font-size: 5vw;
+}
+#buttonGroup {
+    position: relative;
+    display: inline-block;
+    vertical-align: middle;
+    margin-top: 45px;
+    width: 100%;
+  }
 }
