--- a/AWS_Website/www_static/new_template/css/app-stylish-portfolio.css
+++ b/AWS_Website/www_static/new_template/css/app-stylish-portfolio.css
@@ -25,6 +25,7 @@ table {
 
 form {
     width: 90%;
+    max-height: 65vh;
 }
 
 input.renameSlide {
@@ -300,6 +301,8 @@ width: 100%;
     text-align: center;
     font-size: 5.5vw;
     margin-top: 2px;
+    height: 15vh;
+    max-height: 100px;
 }
 
 .mainbackground {
@@ -334,10 +337,12 @@ width: 100%;
 
 .simplePageHowtoGet {
   position: absolute;
-  top: 14%;
+  margin-top: 16vh;
   left: 10px;
   width: 99%;
   max-width: 100%;
+  height: 75vh;
+  max-height: 85vh;
 }
 
 @media screen and (max-device-width: 1024px) {
@@ -354,7 +359,7 @@ width: 100%;
      font-size: 3vw;
    }
 }
-
+/*
 @media screen and (min-device-width: 0px) and (max-device-width: 350px) {
 
   .remoteTitle{
@@ -388,46 +393,46 @@ width: 100%;
       left: 0;
   }
 
-.loginbody{
-  width: 100%;
-  margin: 0px 1px 0 17px;
-}
+  .loginbody{
+    width: 100%;
+    margin: 0px 1px 0 17px;
+  }
 
-.login-form-control{
-  font-size: 17px;
-}
+  .login-form-control{
+    font-size: 17px;
+  }
 
-#Howtoget{
-  margin-top: 10px;
-}
+  #Howtoget{
+    margin-top: 10px;
+  }
 
-a{
-  color: #C7C7C7;
-  text-shadow: 1px 1px #000000;
-  font-size: 5vw
-}
-#sidebar-wrapper.active {
+  a{
+    color: #C7C7C7;
+    text-shadow: 1px 1px #000000;
+    font-size: 5vw
+  }
+  #sidebar-wrapper.active {
     width: 98%;
-}
-.sidebar-nav{
-  width: 98%;
-}
+  }
+  .sidebar-nav{
+    width: 98%;
+  }
 
-#noticeForm {
+  #noticeForm {
     margin: -1px 9vw 1.5vw 6vw;
-}
-.backLink{
-  color: #C7C7C7;
-  font-size: 4vw;
-}
-#img_get_key {
+  }
+  .backLink{
+    color: #C7C7C7;
+    font-size: 4vw;
+  }
+  #img_get_key {
     width: 90%;
     height: 30%;
-}
-#howToGetPresentationId {
+  }
+  #howToGetPresentationId {
     font-size: 5vw;
-}
-#buttonGroup {
+  }
+  #buttonGroup {
     position: relative;
     display: inline-block;
     vertical-align: middle;
@@ -435,3 +440,4 @@ a{
     width: 100%;
   }
 }
+*/
