--- a/AWS_Website/www_static/new_template/css/my_presentation.css
+++ b/AWS_Website/www_static/new_template/css/my_presentation.css
@@ -1,7 +1,7 @@
 
 .presentationUpgrade{
   background-color: #FFF;
-  height: 18%;
+  height: 38%;
   min-height: 10px;
   border-radius: 4px;
   margin-top: 1vw;
@@ -15,13 +15,27 @@
 .img-rounded {
   margin: 1vw 0 0 4vw;
 }
-
-.videoPres{
+@media screen and (min-width: 440px) and (max-width: 560px) {
+  .img-rounded {
+    margin: 1vw 0 0 1vw;
+  }
 }
+
+.myPresentationThumbnail {
+  margin: 1vw;
+}
+@media screen and (min-width: 440px) and (max-width: 560px) {
+  .myPresentationThumbnail {
+    margin: 1vw 0 0 1vw;
+  }
+}
+
+.videoPres{float: right;margin-top: -50px;}
 .textPres{
   color: #5C456D;
   max-height: 100%;
   height: 100%;
+  width: 60%;
 }
 .presTitle {
 font-size: 161%;
@@ -41,8 +55,4 @@ text-shadow: 1px 1px #FFFFFF;
 .deleteSlide{
   color: red;
 }
-@media screen and (min-width: 440px) and (max-width: 560px) {
-  .img-rounded {
-    margin: 1vw 0 0 1vw;
-  }
-}
+
