--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -797,8 +797,8 @@ audio, video {
 		/*float:right;
 		margin-top:7px;
 		margin-right: 7px !important;
-		float: right;
-    	opacity: 0.6;*/
+		float: right;*/
+    	opacity: 0.6;
 		float:right;
 		background-repeat:no-repeat;
 		cursor:pointer;
